[#1665] PagedCollection implements Iterable; Paging is now under the hood.