@@ -414,25 +414,7 @@ public class CustomerTest {
     public void all() {
         PagedCollection<Customer> pagedCollection = gateway.customer().all();
 
-        Assert.assertTrue(pagedCollection.getTotalItems() > 0);
-        Assert.assertTrue(pagedCollection.getPageSize() > 0);
-        Assert.assertEquals(1, pagedCollection.getCurrentPageNumber());
-        Assert.assertNotNull(pagedCollection.getItems().get(0));
-    }
-
-    @Test
-    public void allWithPageNumber() {
-        PagedCollection<Customer> pagedCollection = gateway.customer().all(2);
-        Assert.assertEquals(2, pagedCollection.getCurrentPageNumber());
-    }
-
-    @Test
-    public void allCanTraversePages() {
-        PagedCollection<Customer> pagedCollection = gateway.customer().all();
-        Assert.assertEquals(1, pagedCollection.getCurrentPageNumber());
-
-        PagedCollection<Customer> nextPage = pagedCollection.getNextPage();
-        Assert.assertEquals(2, nextPage.getCurrentPageNumber());
-        Assert.assertNotSame(pagedCollection.getItems().get(0).getId(), nextPage.getItems().get(0).getId());
+        Assert.assertTrue(pagedCollection.getApproximateSize() > 0);
+        Assert.assertNotNull(pagedCollection.getFirst());
     }
 }
